--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="wallpaper">
     
-    <div class="container">
+    <div id="container">
         <nav class="upNavbar">
             <div class="info">
                 <div class="moedas">
@@ -55,9 +55,9 @@
             <button id="left-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-left-icon lucide-arrow-left"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
             </button>
-                <h2>Sala </h2>
+                <h2 id="comodo"> Sala </h2>
 
-            <button id="right-button">
+            <button id="right-button" onclick="goToBedRoom()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-icon lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
             </button>
             </div>
